--- a/kadai_008/kadai_008.html
+++ b/kadai_008/kadai_008.html
@@ -15,7 +15,7 @@
         <a href="kadai_008.html">ホーム</a>
         <a href="https://www.google.com">社会</a>
         <a href="https://www.google.com">経済</a>
-        <a href="https://news.yahoo.co.jp/pickup/6525166">スポーツ</a>
+        <a href="https://www.google.com">スポーツ</a>
         <a href="https://www.google.com">テクノロジー</a>
       </nav>
     </header>
